# kupd

./: .gitignore  Cargo.toml
assets/: tailwind.css
src/: config.rs  gui.rs  main.rs
src/backend/: data.rs  datatypes.rs  log.rs  mod.rs  server.rs
src/style/: main.css
